--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "ec280171-c67b-4cf8-923f-dc27fea91ee1",
-	"authors": ["CubeCoders Limited", "AMP Community"],
-	"origin": "https://github.com/CubeCoders/AMPTemplates.git",
-	"url": "https://github.com/CubeCoders/AMPTemplates",
+	"id": "fartshitandcum12121212121313",
+	"authors": ["me"],
+	"origin": "https://github.com/Senither/hypixel-discord-chat-bridge.git",
+	"url": "https://github.com/Senither/hypixel-discord-chat-bridge",
 	"imagefile": "",
-	"prefix": "",
+	"prefix": "beb",
 	"repotype": "AppTemplates"
 }
